syntax = "proto3";
import "namespace_meta.proto";

option java_multiple_files = true;
option java_package = "org.polypheny.jdbc.proto";
option java_outer_classname = "Meta";

package polypheny.protointerface;

message DbmsVersionRequest{
}

message DbmsVersionResponse{
  string dbms_name = 1;
  string version_name = 2;
  int32 major_version = 3;
  int32 minor_version = 4;
}

message LanguageRequest {}

message LanguageResponse {
  repeated string language_names = 1;
}


message DatabasesRequest {
}

message DatabasesResponse {
  repeated Database databases = 1;
}

message Database {
  string database_name = 1;
  string owner_name = 2;
  string default_namespace_name = 3;
}

message TableTypesRequest {

}

message TableTypesResponse {
  repeated TableType table_types = 1;
}

message TableType {
  string table_type = 1;
}

message TypesRequest {

}

message TypesResponse {
  repeated Type types = 1;
}

message Type {
  string type_name = 1;
  int32 precision = 2;
  optional string literal_prefix = 3;
  optional string literal_suffix = 4;
  bool is_case_sensitive = 5;
  int32 is_searchable = 6;
  bool is_auto_increment = 7;
  int32 min_scale = 8;
  int32 max_scale = 9;
  int32 radix = 10;
}

message UserDefinedTypesRequest {

}

message UserDefinedTypesResponse {
  repeated UserDefinedType user_defined_types = 1;
}

message UserDefinedType {
  string type_name = 1;
  repeated ValueMeta value_metas= 2;
  // more parameters describing a user defined type
}

message ValueMeta {
  string value_name = 1;
  // more parameters describing a value in the template
}

message SqlStringFunctionsRequest {
}

message SqlSystemFunctionsRequest {
}

message SqlTimeDateFunctionsRequest {
}

message SqlNumericFunctionsRequest {
}

message SqlKeywordsRequest {
}

message MetaStringResponse{
  string string = 1;
}

message ProceduresRequest {
  string language = 1;
  optional string procedure_name_pattern = 3;
}

message ProceduresResponse {
  repeated Procedure procedures = 1;
}

message Procedure {
  string trivial_name = 1;
  string input_parameters = 2;
  string description = 3;
  ReturnType return_type = 4;
  string unique_name = 5;

  enum ReturnType {
    UNSPECIFIED = 0;
    UNKNOWN = 1;
    NO_RESULT = 2;
    RESULT = 3;
  }
}

message ClientInfoPropertiesRequest {

}

message ClientInfoProperties {
  map<string, string> properties = 1;
}

message ClientInfoPropertiesResponse {

}


message ClientInfoPropertyMetaRequest {
}

message ClientInfoPropertyMetaResponse {
  repeated ClientInfoPropertyMeta clientInfoPropertyMetas = 1;
}

message ClientInfoPropertyMeta {
  string key = 1;;
  string default_value = 2;
  int32 maxlength = 3;
  string description = 4;
}

message FunctionsRequest {
  string queryLanguage = 1;
  string functionCategory = 2;
}

message FunctionsResponse {
  repeated Function functions = 1;
}

message Function {
  string name = 1;
  string syntax = 2;
  string function_category = 3;
  bool is_table_function = 4;
}